@@ -2,6 +2,14 @@ Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
 	* Multiple selection support for downladed items list
 	* Bumped up version and release dates
 	* Updated parts of README file for upcoming 0.8 release
+	* Updated TODO list
+	* Do nothing if zero elements are selected for the new 
+	  multiple selection items (previously showed bogus 
+	  confirmation message to user - not good! ;)
+	* Re-designed "Updating feed cache" dialog, simplified 
+	  it and added a progress bar to it
+	* gPodderChannelReader now accepts an optional callback
+	  parameter for download status indication (see above)
 
 Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
 	* Added workarounds to libopmlreader to support 
